git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@263 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/authentication/login.html.haml
+++ b/app/views/authentication/login.html.haml
@@ -9,7 +9,7 @@
         %td.input=text_field :user, :name, {:value=>session[:user_name], :tabindex=>1}
       %tr
         %td.label=lc :password
-        %td.input=password_field :user, :password, :tabindex=>2, :onchange=>"document."+@login+".submit()"
+        %td.input=password_field :user, :password, :tabindex=>2
       %tr
         %td.button{:colspan=>2}=submit_tag(lc(:connect), :tabindex=>3)
       %tr
