git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@264 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_products_search.html.haml
+++ b/app/views/management/_products_search.html.haml
@@ -1,5 +1,5 @@
 .search.action-list
-  - form_tag(:action=>:products, :method=>:get) do
+  - form_tag(:action=>:products) do
     %table
       %tr
         %td.label=lc(:search)
