--- a/app/views/management/index.html.haml
+++ b/app/views/management/index.html.haml
@@ -22,6 +22,7 @@
   %h2= lc :parameters
   %ul
     %li=link_to lc(:products), {:action=>:products}
+    %li=link_to lc(:prices), {:action=>:price_lists}
     %li=link_to lc(:shelves), {:action=>:shelves}
 
 
