--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -242,3 +242,16 @@ h2.form { font-size: 15px; margin: 8px 0px 4px; border-bottom: 1px solid #C9D7F1
 input[type="text"], input[type="password"], textarea, select { margin:1px; border-width: 1px; }
 input[type="text"]:focus, input[type="password"]:focus, textarea:focus, select:focus { border:2px solid #79e !important; margin: 0px;}
 input[type="text"].invalid:focus, input[type="password"].invalid:focus, textarea.invalid:focus, select.invalid:focus { border-color: red !important; }
+
+
+#login   { width:512px; border: none; margin:10px auto 56px; background:#F0F3FF; z-index: 1000;}
+#login .logoban { height:64px; background: url(/images/ekylibre.png) no-repeat center; }
+#login h2 { background: url(/images/template/gradient.png) repeat-x top; color:white; padding: 2px; text-align:center; font-size:18px;}
+#login table { border-collapse: collapse;  margin:16px auto; margin-left:auto; margin-right:auto;}
+#login table tr td { padding: 2px 4px;}
+#login table tr td.label { text-align:right;}
+#login table tr td.input, #login table tr td.input input { text-align:left; width:128px;}
+#login table tr td.button {text-align:center; padding:6px 6px 16px;}
+#login .line {height:8px; background: url(/images/template/gradient.png) repeat-x top;}
+div.flash-error {text-align:center; color:red; font-style:italic;height:20px;padding: 16px; margin-top: 64px;}
+
