--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
 %html{:xmlns=>'http://www.w3.org/1999/xhtml'}
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html;charset=UTF-8'}
+    %link{:rel=>"icon", :type=>"image/png", :href=>"/images/favicon.png"}
     = title_tag
     = stylesheet_link_tag :defaults
     = javascript_include_tag :defaults
