--- a/app/views/accountancy/journals_close.html.haml
+++ b/app/views/accountancy/journals_close.html.haml
@@ -5,10 +5,9 @@
     .fields
       =formalize do |f|
         - f.error :journal
-        - f.title :title
         - f.field :journal, :id, :choices => @journals.collect {|j| [j.name, j.id]}
         - f.field :journal, :closed_on, :choices => @journal_periods
     .actions
       =submit_tag(l(:close))
       =link_to(l(:cancel),:back)
-=observe_field "journal_id", :frequency => 0.25, :url=>{:action=>:journals_periods}, :update=>:journal_closed_on, :with => "'journal=' + escape(value)"
+=observe_field "journal_id", :frequency => 0.25, :url=>{:action=>:journals_periods}, :update=>:journal_closed_on, :with => "'journal_select=' + escape(value)"
