--- a/app/views/accountancy/financialyears_close.html.haml
+++ b/app/views/accountancy/financialyears_close.html.haml
@@ -1,7 +1,14 @@
 %h1=lc(:title)
-- form_tag() do
-  %table
-    %tr
-      %td.label=lc :financialyear_date
-      %td.input=select "financialyear", "stopped_on", @financialyear_periods
-      %td.button=submit_tag 'ok', :html => {:tabindex => 2}     
+
+.formalize
+  - form_tag do
+    .fields
+      =formalize do |f|
+        - f.error :financialyear
+        - f.field :financialyear, :id, :choices => @financialyears.collect {|y| [y.code, y.id]}
+        - f.field :financialyear, :stopped_on, :choices => @financialyear_periods
+    .actions
+      =submit_tag(l(:close))
+      =link_to(l(:cancel),:back)
+=observe_field "financialyear_id", :frequency => 0.25, :url=>{:action=>:financialyears_periods}, :update=>:financialyear_closed_on, :with => "'financialyear_select=' + escape(value)"
+
