--- a/app/views/relations/index.html.haml
+++ b/app/views/relations/index.html.haml
@@ -1,7 +1,3 @@
 %h1=lc :title
 
-.action-list
-  %h2= lc :entities
-  %ul
-    %li=link_to lc(:search_entities), :action=>:entities_search
-    %li=link_to lc(:create_entity), :action=>:entities_create
+=menu_index
