--- a/app/views/management/_products_form.html.haml
+++ b/app/views/management/_products_form.html.haml
@@ -9,6 +9,7 @@
   - f.field :product, :shelf_id, :choices=>@current_company.shelves.find(:all, :order=>:name).collect{|x| [x.name, x.id]}, :new=>{:action=>:shelves_create}
   - f.field :product, :unit_id, :choices=>@current_company.units.find(:all, :order=>:label).collect{|x| [x.label, x.id]}
   - f.field :product, :nature, :field=>:radio, :choices=>Product.natures.collect{|x| [lc(:natures, x),x.to_s]}
+  - f.field :product, :service_coeff, :html_options=>{ :id=>:service_coeff }
   - f.field :product, :supply_method, :field=>:radio, :choices=>Product.supply_methods.collect{|x| [lc(:supply_methods, x),x.to_s]}
   - f.field :product, :active
   - f.field :product, :to_purchase
@@ -21,5 +22,7 @@
   - f.field :product, :comment
   - f.title :accountancy
   - f.field :product, :account_id, :choices=>@current_company.accounts.find(:all, :conditions=>{:deleted=>false}, :order=>:number).collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}
+=javascript_tag("function display_service_coeff(element) { var sc=$('service_coeff'); if (element.checked) { sc.style.display=''; } else { sc.style.display='none'; }; return false; }\ndisplay_service_coeff($('product_nature_service'));")
 =observe_field("product_name", :frequency =>0.25, :function => "var cn = $('product_catalog_name'); cn.value = value;")
+=observe_field("product_nature_service", :frequency =>0.25, :function => "display_service_coeff(element);")
 
