git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@277 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_journals_form.html.haml
+++ b/app/views/accountancy/_journals_form.html.haml
@@ -1,6 +1,5 @@
 =formalize(:inner_form=>true) do |f|
   - f.error :journal
-  - f.title :title
   - f.field :journal, :name
   - f.field :journal, :code
-  - f.field :journal, :nature_id
+  - f.field :journal, :nature, :field=>:radio, :choices=>Journal.natures.collect{|x| [lc(:natures, x),x.to_s]}
