--- a/app/views/accountancy/_bank_accounts_form.html.haml
+++ b/app/views/accountancy/_bank_accounts_form.html.haml
@@ -1,14 +1,13 @@
 =formalize(:inner_form=>true) do |f|
   - f.error :bank_account
-  - f.title :title
+  - f.title :rib
   - f.field :bank_account, :name
   - f.field :bank_account, :bank_code
   - f.field :bank_account, :agency_code
   - f.field :bank_account, :number    
   - f.field :bank_account, :key  
-  - f.field :bank_account, :iban  
-  - f.field :bank_account, :iban_text  
-  - f.field :bank_account, :account_id
+  - f.title :accountancy
+  - f.field :bank_account, :account_id, :choices => @current_company.accounts.find(:all).collect {|b| [b.number, b.id]}
   - f.field :bank_account, :currency_id
   - f.field :bank_account, :journal_id
 #currency
