git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@278 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_accounts_form.html.haml
+++ b/app/views/accountancy/_accounts_form.html.haml
@@ -1,8 +1,8 @@
 -if @account
-  =formalize(:inner_form=>true) do |f|
+  =formalize do |f|
     - f.error :account
     - f.field :account, :name
-    - f.field :account, :label
-    - f.field :account, :number  
+    -# f.field :account, :label
+    - f.field :account, :number if @account.new_record?
         
      
