--- a/app/views/company/departments.html.haml
+++ b/app/views/company/departments.html.haml
@@ -1,6 +1,2 @@
-#userslist
-  =lc(:departments_listing)
-#getback
-  =link_to lc(:getback) , {:action=>:index}
-#dyta
-  =dyta :departments
+%h1=lc(:title)
+=dyta :departments
