--- a/app/views/company/establishments.html.haml
+++ b/app/views/company/establishments.html.haml
@@ -1,6 +1,2 @@
-#userslist
-  =lc(:establishments_listing)
-#getback
-  =link_to lc(:getback) , {:action=>:index}
-#dyta
-  =dyta :establishments
+%h1=lc(:title)
+=dyta :establishments
