--- a/app/views/company/users.html.haml
+++ b/app/views/company/users.html.haml
@@ -1,6 +1,2 @@
-#userslist
-  =lc(:users_listing)
-#getback
-  =link_to lc(:getback) , {:action=>:index}
-#dyta
-  =dyta :users
+%h1=lc(:title)
+=dyta :users
