--- a/app/views/company/_establishments_form.html.haml
+++ b/app/views/company/_establishments_form.html.haml
@@ -1,6 +1,6 @@
-=formalize(:inner_form=>true) do |f|
+=formalize do |f|
   -f.error :establishment
   -f.title lc(:subtitle)
   -f.field :establishment, :name
   -f.field :establishment, :nic
-  -f.field :establishment, :note
+  -f.field :establishment, :comment
