--- a/app/views/company/_users_form.html.haml
+++ b/app/views/company/_users_form.html.haml
@@ -1,10 +1,10 @@
-=formalize(:inner_form=>true) do |f|
+=formalize do |f|
   -f.error :user
   -f.title lc(:subtitle)
-  -f.field :user, :name
-  -f.field :user, :first_name
   -f.field :user, :last_name
+  -f.field :user, :first_name
   -f.field :user, :email
+  -f.field :user, :name
   -f.field :user, :password
   -f.field :user, :password_confirmation
-  -f.field :user, :role_id
+  -f.field :user, :role_id, :choices=>@current_company.roles.find(:all, :order=>:name).collect{|x| [x.name, x.id]}
