git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@285 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/shared/form_create.html.haml
+++ b/app/views/shared/form_create.html.haml
@@ -1,5 +1,8 @@
 %h1=l self.controller.controller_name.to_sym, action_name.to_sym, :title
 - form_tag do
+  %h2=@partial
+  =render :partial=>@partial
+  =render :partial=>@partial
   =render :partial=>@partial
   .actions
     =submit_tag(l(@options[:submit]||:create))
