--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -229,9 +229,9 @@ a.button:hover, a.button:active, a.button:focus { padding: 2px 7px;}
 /*#side .action-list h2 { font-size : 13px; color: black; padding: 4px; background: #BDF; text-align: center; }*/
 #side .action-list h2 { font-size : 13px; color: white; padding: 4px; background: #46A; text-align: center; }
 #side .action-list ul { padding: 0px 0px; }
-#side .action-list li { padding: 2px 4px 4px; list-style-type: none; background: #f1f8ff url(/images/template/action.png) repeat-x bottom; }
+#side .action-list li { padding: 2px 4px 4px; list-style-type: none; background: #e9f3fe url(/images/template/table_head.png) repeat-x bottom; }
 #side .action-list li a { font-size: 13px; }
-#side .action-list li:hover { background: #ACF; }
+#side .action-list li:hover { background: #FFD; }
 
 
 
