--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -100,6 +100,7 @@ tr.unpointable.odd td{background: #FF9999;}
 td.result {  padding:15px 15px 15px 15px;  border-collapse: collapse; text-align:center;}
 table.document th { font-size:20px; padding:20px 0 20px 30px; text-align:left;  }
 table.document td { font-size:15px; }
+.print { padding:10px 0 0 620px; }
 
 /*
 .menu a:hover { text-decoration:none;}
